[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "sentiment-analysis-ai-mcp"
version = "1.0.0"
description = "Sentiment Analysis Ai MCP server. Tools: analyze sentiment, batch analyze, compare sentiments. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "sentiment", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/sentiment-analysis-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
sentiment_analysis_ai_mcp = "server:main"
